flapivor/tests/m1/hopix/parser/good/114-while-1.hopix
val main =
  while True { nothing () }