flapivor/tests/m1/hopix/parser/bad/91-case-4.hopix
val nest =
  case bird {
     Nest (Some (bird)) => bird
     Nest (None) => nothing
  }